Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -108,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32881486"
       },
-      "description": "Genres: Action, Adventure, Sci-Fi, Thriller\nTags:Philosophy/Stop Motion\nA sequel film to <i>Junk Head</i>."
+      "description": "Genres: Action, Adventure, Sci-Fi, Thriller\nTags:Philosophy/Stop Motion\nA prequel film to <i>Junk Head</i>."
     },
     {
       "id": "tt34807878",
