--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "Kaiju No. 8 Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-xQEHrJS6sKAA.jpg",
-      "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Shounen/Male Protagonist/Military/Urban Fantasy/Gore/Primarily Adult Cast/Shapeshifting/Guns/Super Power/Swordplay/Ojou-sama/Henshin/Tokusatsu/Work/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
+      "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Shounen/Male Protagonist/Military/Primarily Adult Cast/Urban Fantasy/Gore/Shapeshifting/Guns/Super Power/Swordplay/Ojou-sama/Henshin/Tokusatsu/Work/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
     },
     {
       "id": "tt36592690",
@@ -67,7 +67,7 @@
       "id": "tt33060122",
       "type": "series",
       "name": "Rascal Does Not Dream of Santa Claus",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-TboHNT6IyJy9.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-9leqLiNuOqNu.png",
       "description": "Genres: Comedy, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Female Protagonist/Male Protagonist/Urban Fantasy/Idol/Primarily Adult Cast/Acting\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n<i>IS THE REAL MINISKIRT SANTA IN A SEA OF FAKES?</i><br><br>\n\nSakuta thought he’d already accomplished step one: Find Touko Kirishima. The next step was convincing her to help protect Mai, but that proved easier said than done. In the process, however, he makes a confusing discovery: There are multiple Touko Kirishimas! The Touko he knows may not actually be the person he’s looking for! With clues from his friends’ prophetic dreams, he gets closer to figuring out exactly what danger awaits Mai, but he’ll have to sort through the fake Kirishimas and determine who’s the real deal before it’s too late…<br><br> \n(Source: Yen Press)"
     },
     {
@@ -130,7 +130,7 @@
       "id": "tt36592708",
       "type": "series",
       "name": "There's No Freaking Way I'll Be Your Lover! Unless...",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-yH1WUwwBYpHf.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-jRXZ29bN61Zc.jpg",
       "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/Female Harem/LGBTQ+ Themes/School\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
@@ -211,18 +211,18 @@
       "description": "Genres: Comedy, Romance\nTags:Shounen/Male Protagonist/Heterosexual/School/Tomboy\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
     },
     {
-      "id": "tt32535912",
-      "type": "series",
-      "name": "Watari-kun's ****** Is about to Collapse",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-ZnJA9y23b4ee.png",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt35652446",
       "type": "series",
       "name": "Bad Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
       "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Yuri/Delinquents/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
+    },
+    {
+      "id": "tt32535912",
+      "type": "series",
+      "name": "Watari-kun's ****** Is about to Collapse",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-ZnJA9y23b4ee.png",
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36592820",
@@ -239,18 +239,18 @@
       "description": "Genres: Comedy, Drama, Slice of Life, Supernatural\nTags:Seinen\n<i>\"I won't die 'cause I was banned from the afterlife.\"</i><br><br>\n\nA shady self-proclaimed hermit named Momoyuki Mogura, AKA: Mogura, is banned from the afterlife due to an incident. Now he collects spirit possessed will-o'-wisps in his lantern, hoping to make a comeback.<br><br>\n\nIt seems that those who encounter him begin to see peculiar things.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36693655",
-      "type": "series",
-      "name": "With You and the Rain",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32991344",
       "type": "series",
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-iNDlhrWx01tN.jpg",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+    },
+    {
+      "id": "tt36693655",
+      "type": "series",
+      "name": "With You and the Rain",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
+      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt34754751",
@@ -337,18 +337,18 @@
       "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
     },
     {
-      "id": "tt35995459",
-      "type": "series",
-      "name": "Hotel Inhumans",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184034-gjIi5TIHJpZv.jpg",
-      "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe most exquisite hotels in the world have certain standards: the finest food, the most sublime comfort, captivating entertainment, the latest weapons, reliable identity fabrication, and untraceable corpse disposal.\n<br><br>\nThe name of this place where the people who have “forgotten their humanity” visit is “Hotel Inhumans.” The hitmen guests are welcomed by the concierges who never say \"no.\""
-    },
-    {
       "id": "tt35677101",
       "type": "series",
       "name": "Kizetsu Yuusha to Ansatsu Hime",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186561-svLOWbfahG5V.png",
       "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem/Medieval\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!\n<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on July 12th 2025.<i>"
+    },
+    {
+      "id": "tt35995459",
+      "type": "series",
+      "name": "Hotel Inhumans",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184034-gjIi5TIHJpZv.jpg",
+      "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe most exquisite hotels in the world have certain standards: the finest food, the most sublime comfort, captivating entertainment, the latest weapons, reliable identity fabrication, and untraceable corpse disposal.\n<br><br>\nThe name of this place where the people who have “forgotten their humanity” visit is “Hotel Inhumans.” The hitmen guests are welcomed by the concierges who never say \"no.\""
     }
   ]
 }
