Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -131,20 +131,20 @@
       "type": "series",
       "name": "There's No Freaking Way I'll Be Your Lover! Unless...",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184591-jRXZ29bN61Zc.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/Yuri/Female Harem/LGBTQ+ Themes/School\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Comedy, Romance\nTags:Female Protagonist/Primarily Female Cast/School/Yuri/LGBTQ+ Themes/Female Harem\nRenako Amaori is leaving her awkward and lonely junior high school life behind, determined to become a normal girl with normal friends in high school. Glamorous, confident Mai Ouzuka is Renako’s total opposite: wealthy, outgoing, and a literal fashion model. Against the odds, the two girls form an immediate connection. Renako thinks she may have found the best friend of her dreams…until Mai’s romantic confession sends her into a tailspin. Renako wants to prove to Mai that being BFFs is better than being girlfriends, but Mai is dead set on convincing Renako that they’re destined to be lovers. Let the love games begin!<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt14400866",
       "type": "series",
       "name": "A Couple of Cuckoos Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179828-HzHGKWeAt0cE.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179828-WTQtOfZwCWqO.jpg",
       "description": "Genres: Comedy, Romance\nTags:School/Heterosexual/Male Protagonist/Arranged Marriage/Inseki/Shounen/Female Protagonist\nThe second season of <i>Kakkou no Iinazuke</i>.<br><br>\nUmino Nagi and Amano Erika were born on the same day and swapped at birth. Nagi was raised as the son of a diner owner, and Erika the daughter of a hotel tycoon. Their parents encourage them to become engaged, and they begin life together. Soon though, infatuations arise as Nagi becomes stuck in a love quadrangle. Life and love are embroiled in epic turmoil as fate is set in motion once again!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "kitsu:47968",
       "type": "series",
       "name": "Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-m27NabSvpH90.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
       "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Economics/Martial Arts\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
     },
     {
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "Bad Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
-      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Yuri/Delinquents/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
+      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Yuri/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
     },
     {
       "id": "tt32535912",
@@ -246,7 +246,7 @@
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
     },
     {
-      "id": "tt36693655",
+      "id": "tt36143285",
       "type": "series",
       "name": "With You and the Rain",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
@@ -257,7 +257,7 @@
       "type": "series",
       "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
-      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Shounen/Youkai/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
+      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Shounen/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt35652469",
@@ -323,18 +323,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Food/Restaurant\nDennis is one of the most popular members of the Silverwing Battalion, the world's strongest party. So popular, in fact, that the party leader expels him from the group out of spite.\n<br><br>\nStripped of his home, Dennis decides to start life anew following his true calling—as a chef! His life as an adventurer might be over, but his new life as a cook is just beginning. He teams up with Atelier, a young girl who has been similarly exiled from her home, and opens up a restaurant for adventurers.\n<br><br>\nHe's finally able to live out his dream, but he'll need use of more than just his cooking skills to take care of his eclectic customers' problems!\n<br><br>\n(Source: Kaiten Books)"
     },
     {
-      "id": "tt36067745",
-      "type": "series",
-      "name": "Pokémon Concierge Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175035-lv7WMuMVYQk4.jpg",
-      "description": "Genres: Fantasy, Slice of Life\nTags:Female Protagonist/Animals/Work/Iyashikei\nContinuation of <i>Pokémon Concierge</i>.<br><br>\nThis September, the adorable stop-motion animation series <i>Pokémon Concierge</i> returns with four new episodes, inviting viewers back to the Pokémon Resort — a vibrant haven where Pokémon come to relax and enjoy. The story follows Haru, a concierge at the Pokémon Resort, as she grows through her interactions with Pokémon guests and learns valuable life lessons along the way.\n<br><br>\n(Source: Netflix)"
-    },
-    {
       "id": "tt37205655",
       "type": "series",
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
       "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
+    },
+    {
+      "id": "tt36067745",
+      "type": "series",
+      "name": "Pokémon Concierge Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175035-lv7WMuMVYQk4.jpg",
+      "description": "Genres: Fantasy, Slice of Life\nTags:Female Protagonist/Animals/Work/Iyashikei\nContinuation of <i>Pokémon Concierge</i>.<br><br>\nThis September, the adorable stop-motion animation series <i>Pokémon Concierge</i> returns with four new episodes, inviting viewers back to the Pokémon Resort — a vibrant haven where Pokémon come to relax and enjoy. The story follows Haru, a concierge at the Pokémon Resort, as she grows through her interactions with Pokémon guests and learns valuable life lessons along the way.\n<br><br>\n(Source: Netflix)"
     },
     {
       "id": "tt35677101",
