Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36592995"
       },
-      "description": "Genres: Slice of Life\nTags:Anthropomorphism/Iyashikei/Animals/Urban/War\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)"
+      "description": "Genres: Slice of Life\nTags:Anthropomorphism/Iyashikei/Animals/Urban/War\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)\n<br><br>\n<i>Note: The film receives an early premiere at the Tokyo International Shark Film Festival on August 3, 2025.</i>"
     },
     {
       "id": "tt34798832",
