--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -164,7 +164,7 @@
     {
       "id": "tt36592736",
       "type": "series",
-      "name": "Mizu Zokusei no Mahou Tsukai",
+      "name": "The Water Magician",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186052-hFcX9WNzAUlA.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Survival\nRyou is delighted to be reincarnated into the fantastical world of Phi, where he thinks he’ll get to live a quiet life learning to use his newfound water magic. Going with the flow here, however, means something very different. Ryou is immediately pitted against the wild lands he winds up in and the slew of deadly monsters that call the remote subcontinent home. You’d think he’d forget about taking it easy when he’s stuck fighting for his life, but lucky for Ryou, he’s naturally optimistic, clever, and blessed with the hidden “Eternal Youth” trait. Twenty years pass in the blink of an eye, and each encounter along the way pushes him one step closer to the pinnacle of human magic. Little does he realize that’s only the opening chapter of his tale. A fateful meeting soon thrusts Ryou to the forefront of history, forever changing the course of his life... Thus begins the adventures of the strongest water magician the world has ever seen—who also likes to do things at his own pace!<br>\n<br>\n(Source: J-Novel Club)"
     },
@@ -312,7 +312,7 @@
       "id": "tt36082234",
       "type": "series",
       "name": "Food Court de, Mata Ashita.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-tpWzzqZR16pu.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-sEHaMeJ73d7g.png",
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Cute Girls Doing Cute Things/Gyaru/Primarily Female Cast/Primarily Teen Cast\nTo their classmates, Wada is a quiet rich girl while Yamamoto is an intimidating lone wolf…but what they don’t know is that Wada is a mobile game addict in a passionate love-hate relationship (with a 2D character) and Yamamoto has a penchant for urban legends with eyes only for her favorite YouTuber. And their biggest not-so-secret secret—these unlikely friends meet at the food court every day after school to rant, rave, and learn what makes each other tick!\n<br><BR>\n(Source: Yen Press)"
     },
     {
@@ -330,18 +330,18 @@
       "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
     },
     {
-      "id": "tt36067745",
-      "type": "series",
-      "name": "Pokémon Concierge Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175035-lv7WMuMVYQk4.jpg",
-      "description": "Genres: Fantasy, Slice of Life\nTags:Female Protagonist/Animals/Work/Iyashikei\nContinuation of <i>Pokémon Concierge</i>.<br><br>\nThis September, the adorable stop-motion animation series <i>Pokémon Concierge</i> returns with four new episodes, inviting viewers back to the Pokémon Resort — a vibrant haven where Pokémon come to relax and enjoy. The story follows Haru, a concierge at the Pokémon Resort, as she grows through her interactions with Pokémon guests and learns valuable life lessons along the way.\n<br><br>\n(Source: Netflix)"
-    },
-    {
       "id": "tt35677101",
       "type": "series",
       "name": "Kizetsu Yuusha to Ansatsu Hime",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186561-svLOWbfahG5V.png",
       "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem/Medieval\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!\n<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on July 12th 2025.<i>"
+    },
+    {
+      "id": "tt36067745",
+      "type": "series",
+      "name": "Pokémon Concierge Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175035-lv7WMuMVYQk4.jpg",
+      "description": "Genres: Fantasy, Slice of Life\nTags:Female Protagonist/Animals/Work/Iyashikei\nContinuation of <i>Pokémon Concierge</i>.<br><br>\nThis September, the adorable stop-motion animation series <i>Pokémon Concierge</i> returns with four new episodes, inviting viewers back to the Pokémon Resort — a vibrant haven where Pokémon come to relax and enjoy. The story follows Haru, a concierge at the Pokémon Resort, as she grows through her interactions with Pokémon guests and learns valuable life lessons along the way.\n<br><br>\n(Source: Netflix)"
     },
     {
       "id": "tt35995459",
