Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "The Fragrant Flower Blooms With Dignity",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-vmtWANHhtVaB.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/School/Urban/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt32612521",
@@ -53,7 +53,7 @@
       "id": "tt9529546",
       "type": "series",
       "name": "The Rising of the Shield Hero Season 4",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173780-Eb0mcoThC4Xm.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173780-O7v1YfXg61JT.png",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Anti-Hero/Medieval/Magic/Isekai/Male Protagonist/Dragons\nThe fourth season of <i>Tate no Yuusha no Nariagari</i>.<br><br>\n\nThe Return of the Exiled━<br><br>\n\n(Source: Official Twitter)\n\n"
     },
     {
@@ -61,7 +61,7 @@
       "type": "series",
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
-      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Unrequited Love/Seinen/LGBTQ+ Themes\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Seinen/Unrequited Love/LGBTQ+ Themes/Urban Fantasy\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
     },
     {
       "id": "tt33060122",
@@ -81,15 +81,15 @@
       "id": "tt36166928",
       "type": "series",
       "name": "Grand Blue Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-v6KlwnBL8awk.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-jJs8sdFmfv5q.jpg",
       "description": "Genres: Comedy, Slice of Life, Sports\nTags:College/School Club/Scuba Diving/Seinen/Male Protagonist/Nudity/Coastal/Slapstick/Surreal Comedy\nThe second season of <i>Grand Blue</i>."
     },
     {
       "id": "tt32524709",
       "type": "series",
       "name": "New PANTY & STOCKING with GARTERBELT",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx151799-vitrW8Ulb1nn.jpg",
-      "description": "Genres: Action, Comedy, Ecchi, Supernatural\nTags:Female Protagonist/Angels/Anti-Hero/Parody/Surreal Comedy/Demons/Swordplay/Guns\nThe second season of <i>Panty & Stocking with Garterbelt</i>. Unveiled at Anime Expo 2022's <i>\"TRIGGER 10 YEAR ANNIVERSARY & ANNOUNCEMENT\"</i> panel."
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx151799-wJNEn8N7mEcQ.jpg",
+      "description": "Genres: Action, Comedy, Ecchi, Supernatural\nTags:Female Protagonist/Angels/Anti-Hero/Parody/Surreal Comedy/Demons/Swordplay/Guns\n<i>The Bitches Are Back!!</i><br><br>\n\nIn Daten City, a realm between heaven and hell, sinister spirits known as \"Ghosts\" prowl the streets, feeding on human desires and resentment. Yet, in the darkest moments, two figures emerge to obliterate these vengeful beings with a divine light beyond human understanding. Their names? Panty & Stocking! These fallen angel sisters have been tasked with purging the darkness engulfing the earth. But who are they, really? Are they truly messengers of God... or agents of the Devil? <br><br>\n\n\n(Source: New PANTY & STOCKING with GARTERBELT Official Site)\n\n<br><br>\n<i> Note: Unveiled at Anime Expo 2022's <i>\"TRIGGER 10 YEAR ANNIVERSARY & ANNOUNCEMENT\"</i> panel."
     },
     {
       "id": "tt31624309",
@@ -141,18 +141,18 @@
       "description": "Genres: Comedy, Romance\nTags:School/Heterosexual/Male Protagonist/Arranged Marriage/Inseki/Shounen/Female Protagonist\nThe second season of <i>Kakkou no Iinazuke</i>.<br><br>\nUmino Nagi and Amano Erika were born on the same day and swapped at birth. Nagi was raised as the son of a diner owner, and Erika the daughter of a hotel tycoon. Their parents encourage them to become engaged, and they begin life together. Soon though, infatuations arise as Nagi becomes stuck in a love quadrangle. Life and love are embroiled in epic turmoil as fate is set in motion once again!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "kitsu:47968",
-      "type": "series",
-      "name": "Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Economics/Martial Arts\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
-    },
-    {
       "id": "tt36988358",
       "type": "series",
       "name": "Takopii no Genzai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
       "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Female Protagonist/Aliens/Shounen\nTakopi travels from his home of Happy Planet to spread happiness across Earth, but meets the unsmiling Shizuka upon landing. Her friends at school and home life seem to be the source of her somber expression—and the pure-hearted Takopi is determined to change things for the better! But what truths await him when the curtains rise in this shocking drama?!\n<br><br>\n(Source: MANGA Plus)"
+    },
+    {
+      "id": "kitsu:47968",
+      "type": "series",
+      "name": "Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou 2nd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169440-MhlOxaIyASRu.jpg",
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Language Barrier/Isekai/Food/Magic/Dungeon/Parody/Male Protagonist/Economics/Martial Arts\nThe second season of <i>Jidou Hanbaiki ni Umarekawatta Ore wa Meikyuu wo Samayou.</i>"
     },
     {
       "id": "tt36592736",
@@ -242,7 +242,7 @@
       "id": "tt32991344",
       "type": "series",
       "name": "Clevatess",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-iNDlhrWx01tN.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-qiEz0gQD8H5N.png",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
     },
     {
