--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "I Was Reincarnated as the 7th Prince So I Can Take My Time Perfecting My Magical Ability Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178090-1OOScJqXLjRd.png",
-      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Magic/Medieval\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nThe magic maniac returns, his next target? Holy Magic.<br><br>\n(Source: Crunchyroll  Official Trailer)"
+      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Male Protagonist/Magic/Medieval\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nThe magic maniac returns, his next target? Holy Magic.<br><br>\n(Source: Crunchyroll  Official Trailer)"
     },
     {
       "id": "tt11448214",
@@ -208,7 +208,7 @@
       "type": "series",
       "name": "Arknights: RISE FROM EMBER",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/War/Kemonomimi/Ensemble Cast\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
+      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
       "id": "tt32535912",
@@ -229,7 +229,7 @@
       "type": "series",
       "name": "Scooped Up by an S-Rank Adventurer!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-m1nu1QvnRmII.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35995444",
@@ -295,18 +295,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Cute Girls Doing Cute Things/Gyaru/Primarily Female Cast/Primarily Teen Cast\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt34710683",
-      "type": "series",
-      "name": "BULLET/BULLET",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
-      "description": "Genres: \nTags:Cars\nA team of thieves find themselves in a world of trouble after completing their latest job."
-    },
-    {
       "id": "tt36074011",
       "type": "series",
       "name": "Turkey! Time to Strike",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
       "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
+    },
+    {
+      "id": "tt34710683",
+      "type": "series",
+      "name": "BULLET/BULLET",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
+      "description": "Genres: \nTags:Cars\nA team of thieves find themselves in a world of trouble after completing their latest job."
     },
     {
       "id": "tt32536624",
