--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -36,18 +36,18 @@
       "description": "Genres: Action, Drama, Fantasy\nTags:Shounen/Urban Fantasy/Dystopian/Male Protagonist/Super Power/Ensemble Cast/Post-Apocalyptic/Revenge/Survival\nA boy lives in a floating town, where the poor scrape by and the rich live a sumptuous life, simply casting their garbage off the side, into the abyss. When he’s falsely accused of murder, though, his wrongful conviction leads to an unimaginable punishment—exile off the edge, with the rest of the trash. Down on the surface, the cast-off waste of humanity has bred vicious monsters, and to travel the path to vengeance against those who cast him into Hell, a boy will have to become a warrior…\n<br><br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt17069148",
-      "type": "series",
-      "name": "SAKAMOTO DAYS Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184237-OJAksU2fsIPx.jpg",
-      "description": "Genres: Action, Comedy\nTags:Shounen/Assassins/Crime/Guns/Found Family/Konbini/Criminal Organization/Male Protagonist/Yakuza/Gangs/Super Power/Primarily Adult Cast/Family Life/Urban/Gore\nThe second part of <i>SAKAMOTO DAYS</i>."
-    },
-    {
       "id": "tt15975122",
       "type": "series",
       "name": "Call of the Night Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175914-VsbL90WzuqoM.jpg",
       "description": "Genres: Comedy, Psychological, Romance, Slice of Life, Supernatural\nTags:Vampire/Urban Fantasy/Heterosexual/Male Protagonist/Hikikomori/Urban/Female Protagonist/Coming of Age/Shounen/Detective\nThe second season of <i>Yofukashi no Uta</i>.\n<br><br>\nKo overcomes his confusion about becoming a vampire and decides to \"like\" Nazuna, while Nazuna resolves to make Ko \"fall in love\" with her. Without understanding what \"love\" even is, the two of them spend their nights together in a frenzy. Meanwhile, Detective Uguisu Anko is closing in with her plot to kill vampires, not just Nazuna. A vampire's weakness is \"anything they were attached to when they were human\" and so they all try to get rid of this weakness before it's too late. But, Nazuna has no memory of her human life. What is Nazuna's hidden past? Why did Anko start killing vampires? And what is the \"secret\" that Nazuna and Anko share? For Ko, Nazuna, Anko, a fun \"late night\" doesn't end here... a new \"night\" begins!\n<br><br>\n(Source: HIDIVE)"
+    },
+    {
+      "id": "tt17069148",
+      "type": "series",
+      "name": "SAKAMOTO DAYS Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184237-OJAksU2fsIPx.jpg",
+      "description": "Genres: Action, Comedy\nTags:Shounen/Assassins/Crime/Guns/Found Family/Konbini/Criminal Organization/Male Protagonist/Yakuza/Gangs/Super Power/Primarily Adult Cast/Family Life/Urban/Gore\nThe second part of <i>SAKAMOTO DAYS</i>."
     },
     {
       "id": "tt9529546",
@@ -68,7 +68,7 @@
       "type": "series",
       "name": "Rascal Does Not Dream of Santa Claus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-9leqLiNuOqNu.png",
-      "description": "Genres: Comedy, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Female Protagonist/Male Protagonist/Urban Fantasy/Idol/Primarily Adult Cast/Acting\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n After encountering various girls going through Puberty Syndrome, Sakuta Azusagawa's high school days have come to a close, and he is now a university student. He enrolls at a university in Kanazawa-hakkei alongside his girlfriend Mai Sakurajima, a nationally famed actress. Off campus, he stumbles upon an out-of-season miniskirt Santa. Precognitive dreams, an anonymous online singer, poltergeists buzzing on social media... A mysterious tale with enigmatic phenomenons surrounding girls with wavering hearts starts again. Puberty continues...\n<br><br> \n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Urban Fantasy/Female Protagonist/Male Protagonist/Primarily Adult Cast/Acting/Idol\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n After encountering various girls going through Puberty Syndrome, Sakuta Azusagawa's high school days have come to a close, and he is now a university student. He enrolls at a university in Kanazawa-hakkei alongside his girlfriend Mai Sakurajima, a nationally famed actress. Off campus, he stumbles upon an out-of-season miniskirt Santa. Precognitive dreams, an anonymous online singer, poltergeists buzzing on social media... A mysterious tale with enigmatic phenomenons surrounding girls with wavering hearts starts again. Puberty continues...\n<br><br> \n(Source: Crunchyroll)"
     },
     {
       "id": "tt30876484",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Apocalypse Bringer Mynoghra: World Conquest Starts with the Civilization of Ruin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178433-8KzNsjTmdAvw.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Isekai\nTakuto Ira succumbed to illness at a young age and ended up reincarnating in a world that resembles the fantasy turn-based strategy game Eternal Nations. Not only did he reincarnate into his favorite game, but as the god who commands the evil civilization Mynoghra. With Mynoghra's beautiful hero unit, Sludge Witch Atou by his side, not even legendarily difficult race traits will stand in the way of restarting their civilization! “Lord Takuto…won't you start over with me?” Explore, Expand, Exploit, Exterminate! A tactical fantasy world is waiting for heroes like you! Join Eternal Nations today!\n<br><br>\n(Source: Cross Infinite World)"
+      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Isekai/Virtual World/Elf\nTakuto Ira succumbed to illness at a young age and ended up reincarnating in a world that resembles the fantasy turn-based strategy game Eternal Nations. Not only did he reincarnate into his favorite game, but as the god who commands the evil civilization Mynoghra. With Mynoghra's beautiful hero unit, Sludge Witch Atou by his side, not even legendarily difficult race traits will stand in the way of restarting their civilization! “Lord Takuto…won't you start over with me?” Explore, Expand, Exploit, Exterminate! A tactical fantasy world is waiting for heroes like you! Join Eternal Nations today!\n<br><br>\n(Source: Cross Infinite World)"
     },
     {
       "id": "tt33050376",
@@ -218,13 +218,6 @@
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35652446",
-      "type": "series",
-      "name": "Bad Girl",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
-      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Yuri/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
-    },
-    {
       "id": "tt36592820",
       "type": "series",
       "name": "Scooped Up by an S-Rank Adventurer!",
@@ -232,11 +225,11 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt35995444",
+      "id": "tt35652446",
       "type": "series",
-      "name": "Dekin no Mogura: The Earthbound Mole",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184574-nAWTcZ42tGRm.png",
-      "description": "Genres: Comedy, Drama, Slice of Life, Supernatural\nTags:Seinen\n<i>\"I won't die 'cause I was banned from the afterlife.\"</i><br><br>\n\nA shady self-proclaimed hermit named Momoyuki Mogura, AKA: Mogura, is banned from the afterlife due to an incident. Now he collects spirit possessed will-o'-wisps in his lantern, hoping to make a comeback.<br><br>\n\nIt seems that those who encounter him begin to see peculiar things.<br><br>\n\n(Source: Crunchyroll)"
+      "name": "Bad Girl",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
+      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Yuri/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
     },
     {
       "id": "tt32991344",
@@ -244,6 +237,13 @@
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-qiEz0gQD8H5N.png",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+    },
+    {
+      "id": "tt35995444",
+      "type": "series",
+      "name": "Dekin no Mogura: The Earthbound Mole",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184574-nAWTcZ42tGRm.png",
+      "description": "Genres: Comedy, Drama, Slice of Life, Supernatural\nTags:Seinen\n<i>\"I won't die 'cause I was banned from the afterlife.\"</i><br><br>\n\nA shady self-proclaimed hermit named Momoyuki Mogura, AKA: Mogura, is banned from the afterlife due to an incident. Now he collects spirit possessed will-o'-wisps in his lantern, hoping to make a comeback.<br><br>\n\nIt seems that those who encounter him begin to see peculiar things.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36143285",
@@ -302,18 +302,18 @@
       "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
-      "id": "tt34710683",
-      "type": "series",
-      "name": "BULLET/BULLET",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
-      "description": "Genres: \nTags:Cars\nA team of thieves find themselves in a world of trouble after completing their latest job."
-    },
-    {
       "id": "tt32536624",
       "type": "series",
       "name": "Private Tutor to the Duke's Daughter",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170113-fq1NyxPRvLKc.jpg",
       "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt34710683",
+      "type": "series",
+      "name": "BULLET/BULLET",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
+      "description": "Genres: \nTags:Cars\nA team of thieves find themselves in a world of trouble after completing their latest job."
     },
     {
       "id": "tt30057076",
