--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "DAN DA DAN Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185660-uB8RUMBGovGr.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Ghost/Aliens/Youkai/Shounen/Surreal Comedy/Primarily Teen Cast/Urban Fantasy/Heterosexual/Female Protagonist/Artificial Intelligence/Cult/Male Protagonist/Kaiju/Tokusatsu/Henshin/Exorcism/Body Horror\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Ghost/Aliens/Youkai/Shounen/Surreal Comedy/Primarily Teen Cast/Urban Fantasy/Heterosexual/Female Protagonist/Artificial Intelligence/Cult/Male Protagonist/Kaiju/Tokusatsu/Henshin/Exorcism/Body Horror\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)\n<br><br>\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>DAN DA DAN: EVIL EYE</b> before the Japanese premiere was pre-screened in advance in theaters on June 6, 2025 in North America by GKIDS Films and June 7 and 8 in Europe by Piece of Magic Entertainment and Animation Digital Network.</i>"
     },
     {
       "id": "tt15765670",
@@ -109,7 +109,7 @@
       "id": "tt32344704",
       "type": "series",
       "name": "Tougen Anki: Legend of the Cursed Blood",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177474-aTOxEi3NLywQ.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177474-PaLG685VJsq5.jpg",
       "description": "Genres: Action, Mystery, Supernatural\nTags:Shounen/Male Protagonist/Demons/Guns/Urban Fantasy/Revenge/Shapeshifting/CGI\nThe bloodlines of “Oni” and “Momotarou” have been passed down among certain humans for generations.<br>\n<br>\nLong ago, the Oni, aware of their own ferocity, lived in seclusion. However, their peace was shattered by an invasion led by Momotarou.\nOver thousands of years, these two factions formed the “Momotarou Agency” and the “Oni Agency,” respectively, and have been locked in conflict ever since.<br>\n<br>\nThe protagonist, Shiki Ichinose, suddenly learns of his Oni lineage following an unexpected attack by Momotarou. This revelation sets Shiki on a path to discover the destiny that lies within his blood — a meeting with the Oni dwelling within him.<br>\n<br>\n—A new generation of dark heroics begins here in this tale of demons!\n<br>\n<br>\n(Source: Official Site)"
     },
     {
@@ -117,7 +117,7 @@
       "type": "series",
       "name": "CITY THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181841-xg2brEzNHvjU.png",
-      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/Ensemble Cast/Surreal Comedy/Primarily Adult Cast/College\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/College/Ensemble Cast/Surreal Comedy/Primarily Adult Cast\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
     },
     {
       "id": "tt33317800",
@@ -204,18 +204,18 @@
       "description": "Genres: Comedy, Romance\nTags:Shounen/Male Protagonist/Heterosexual/School/Tomboy\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
     },
     {
-      "id": "tt36987898",
-      "type": "series",
-      "name": "Arknights: RISE FROM EMBER",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
-    },
-    {
       "id": "tt32535912",
       "type": "series",
       "name": "Watari-kun's ****** Is about to Collapse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-u4wDhHlTfX9P.jpg",
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36987898",
+      "type": "series",
+      "name": "Arknights: RISE FROM EMBER",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
+      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
       "id": "tt36592820",
@@ -264,7 +264,7 @@
       "type": "series",
       "name": "Betrothed to My Sister's Ex",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179879-cGCVUUPS6sbV.png",
-      "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist\nMarie, the second daughter of a poor baron’s household, is treated like a servant by her parents. Even at Marie’s birthday party, her beautiful elder sister, Anastasia, is the star. Outside, Marie bumps into Count Kyuros Granado, who falls for her at first sight. Yet, due to a misunderstanding, the Count proposes to Anastasia. After a tragic accident, Marie must marry the count instead!\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist/Royal Affairs\nMarie, the second daughter of a poor baron’s household, is treated like a servant by her parents. Even at Marie’s birthday party, her beautiful elder sister, Anastasia, is the star. Outside, Marie bumps into Count Kyuros Granado, who falls for her at first sight. Yet, due to a misunderstanding, the Count proposes to Anastasia. After a tragic accident, Marie must marry the count instead!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35652489",
@@ -295,18 +295,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Cute Girls Doing Cute Things/Gyaru/Primarily Female Cast/Primarily Teen Cast\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36074011",
-      "type": "series",
-      "name": "Turkey! Time to Strike",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
-      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
-    },
-    {
       "id": "tt32536624",
       "type": "series",
       "name": "Private Tutor to the Duke's Daughter",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170113-fq1NyxPRvLKc.jpg",
       "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36074011",
+      "type": "series",
+      "name": "Turkey! Time to Strike",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
+      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
       "id": "tt34710683",
@@ -344,11 +344,11 @@
       "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe best hotels must meet certain standards, including the finest cuisine, ways to relax, and entertainment. Of course, they also need the best selection of weapons, reliable ways to falsify one’s identity, and ways to dispose of evidence. In this hotel at the border of death stand two concierges, Ikuro Hoshi and Sara Haizaki. What kinds of requests will the assassins have for them next?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36067745",
+      "id": "tt35014218",
       "type": "series",
-      "name": "Pokémon Concierge Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175035-lv7WMuMVYQk4.jpg",
-      "description": "Genres: Fantasy, Slice of Life\nTags:Female Protagonist/Animals/Work/Iyashikei\nContinuation of <i>Pokémon Concierge</i>.<br><br>\nThis September, the adorable stop-motion animation series <i>Pokémon Concierge</i> returns with four new episodes, inviting viewers back to the Pokémon Resort — a vibrant haven where Pokémon come to relax and enjoy. The story follows Haru, a concierge at the Pokémon Resort, as she grows through her interactions with Pokémon guests and learns valuable life lessons along the way.\n<br><br>\n(Source: Netflix)"
+      "name": "Hitozuma no Kuchibiru wa Kan Chu-Hi no Aji ga Shite",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186789-40kriALlmxYQ.jpg",
+      "description": "Genres: Comedy, Ecchi, Romance\nTags:Netori/Primarily Adult Cast/Male Protagonist/Seinen\nThe omnibus manga centers on college student Tsuyoshi, who loves drinking strong canned chu-hai, and his encounters with various married women. <br><br>\n\n(Source: Anime News Network, edited)"
     }
   ]
 }
